# Testing

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/Formula/: Formula.h
src/: main.cpp
src/Formula/: Formula.cpp
tst/: CMakeLists.txt  UT_Formula.cpp  main.cpp
